--- a/campeonatoapp/src/main/resources/templates/campeonato/formCampeonato.html
+++ b/campeonatoapp/src/main/resources/templates/campeonato/formCampeonato.html
@@ -3,21 +3,40 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	
 <head>
-	<title>CampeonatosApp</title>
+		<title>CampeonatosApp</title>
+		<!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+
+	
 </head>
 <body>
 
-	<h1>Cadastro de Eventos</h1>
-	<form method="post">
+	<h1>Cadastro de Campeonatos</h1>
+	<h3><a href="/campeonatos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i></a>Lista de Campeonatos</a></h3>
+	<form class="container" method="post">
 		Nome: <input type="text" value="" name="nome"/>
-		Local: <input type="text" value="" name="local"/>
-		Data: <input type="date" value="" name="data"/>
-		Horario: <input type="text" value="" name="horario"/>
-		
-		<button type="submit">Salvar</button>
+		<div class="row">
+			<div class="imput-field col s6">
+				Local: <input type="text" value="" name="local"/>
+			</div>
+			<div class="imput-field col s3">
+				Data: <input type="date" value="" name="data"/>
+			</div>
+			<div class="imput-field col s3">
+				Horario: <input type="text" value="" name="horario"/>
+			</div>	
+		</div>
+		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
 	</form>
 
-
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 
 
