--- a/campeonatoapp/src/main/resources/templates/campeonato/detalhesCampeonato.html
+++ b/campeonatoapp/src/main/resources/templates/campeonato/detalhesCampeonato.html
@@ -28,6 +28,12 @@
 			<p>Horario: <span th:text="${campeonato.horario}"></span></p>
 		</div>
 		
+		<form method="post">
+			Registro: <input type="text" value="" name="registro"/>
+			Nome: <input type="text" value="" name="nomeAcademia"/>
+			<button type="submit" class="waves-effect waves-light btn">Adicionar</button>
+		</form>
+		
 	
 	
 	
