--- a/campeonatoapp/src/main/resources/templates/campeonato/detalhesCampeonato.html
+++ b/campeonatoapp/src/main/resources/templates/campeonato/detalhesCampeonato.html
@@ -32,12 +32,18 @@
 			Registro: <input type="text" value="" name="registro"/>
 			Nome: <input type="text" value="" name="nomeAcademia"/>
 			<button type="submit" class="waves-effect waves-light btn">Adicionar</button>
-		</form>
-		
-	
-	
-	
-	
+		</form>	
+	</div>
+	<h5>Lista de Academias</h5>
+	<div class="container" th:each="academia : ${academias}">
+			<div class="row">
+			<div class="input-field col s6">
+				<p><span th:text="${academia.nomeAcademia}"></span></p>
+			</div>
+			<div class="input-field col s3">
+				<p><span th:text="${academia.registro}"></span></p>
+			</div>
+		</div>
 	</div>
 
 	<!--JavaScript at end of body for optimized loading-->
