--- a/campeonatoapp/src/main/resources/templates/campeonato/formCampeonato.html
+++ b/campeonatoapp/src/main/resources/templates/campeonato/formCampeonato.html
@@ -16,8 +16,9 @@
 	
 </head>
 <body>
-
+	
 	<h1>Cadastro de Campeonatos</h1>
+	<th:block th:include="mensagemValidacao"></th:block>
 	<h3><a href="/campeonatos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i></a>Lista de Campeonatos</a></h3>
 	<form class="container" method="post">
 		Nome: <input type="text" value="" name="nome"/>
